# pyConic

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  tox.ini
docs/: README.md
pyConic/: __init__.py  conic.py
src/pyConic/: __init__.py  conic.py
tests/: __init__.py  test_ConicSection.py
