[metadata]
name = pyConic
version = 0.1.1
description = Python tools to work with conic sections
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/adrianschlatter/pyConic/tree/master
author = Adrian Schlatter
license = BSD3
license_files = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Intended Audience :: Science/Research
        Topic :: Scientific/Engineering :: Mathematics
        License :: OSI Approved :: BSD License
        Programming Language :: Python :: 3
keywords = conic, mathematics

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using
# pip install -e .[dev,test]
test =
    pytest
    check-manifest
    flake8
    coverage
dev =
    tox
    twine

[tool:pytest]
testpaths =
    tests

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F821
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**
